add ability to change window ordering in tmux

--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -22,6 +22,8 @@ bind + resize-pane -U 3
 bind . command-prompt
 bind a last-window
 bind space command-prompt -p index "select-window"
+bind C-N swap-window -t -1
+bind C-M swap-window -t +1
 
 # fix titlebar
 set -g set-titles on
