update tmux conf for 2.9 and update alacritty.yml

--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -40,27 +40,22 @@ set -g mouse on
 ###############################################################################
 
 # default statusbar colors
-set-option -g status-bg colour23 #base02
-set-option -g status-fg colour8 #yellow
-set-option -g status-attr default
+set-option -g status-style fg=colour8
+set-option -g status-style bg=colour23
 
 # default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+set-window-option -g window-status-style fg=colour244
 
 # active window title colors
-set-window-option -g window-status-current-fg colour73 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-style fg=colour73
 
 # pane border
-set-option -g pane-border-fg colour8 #base02
-set-option -g pane-active-border-fg colour23 #base01
+set-option -g pane-border-style fg=colour8
+set-option -g pane-active-border-style fg=colour23
 
 # message text
-set-option -g message-bg colour23 #base02
-set-option -g message-fg colour73 #orange
+set-option -g message-style fg=colour73
+set-option -g message-style bg=colour23
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
