--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -2,7 +2,7 @@
 set-option -g history-limit 100000
 
 # modern colors
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",alacritty:Tc"
 
 # prefix key
