resurrect tmux sessions

--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -1,9 +1,13 @@
+###############################################################################
+# general settings              					      #
+###############################################################################
+
 # set scroll history to 100,000 lines
 set-option -g history-limit 100000
 
-# modern colors
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",alacritty:Tc"
+###############################################################################
+# general settings              					      #
+###############################################################################
 
 # prefix key
 set -g prefix C-f
@@ -39,6 +43,10 @@ set -g mouse on
 # design changes							      #
 ###############################################################################
 
+# modern colors
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",alacritty:Tc"
+
 # default statusbar colors
 set-option -g status-style fg=colour8
 set-option -g status-style bg=colour23
@@ -66,3 +74,19 @@ set-window-option -g clock-mode-colour colour64 #green
 
 # bell
 set-window-option -g window-status-bell-style fg=colour23,bg=colour160 #base02, red
+
+###############################################################################
+# plugins              							      #
+###############################################################################
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '1'
+set -g @resurrect-strategy-nvim 'session'
+
+# initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
