--- a/gui/.config/i3/config
+++ b/gui/.config/i3/config
@@ -155,6 +155,6 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-	tray_output eDP-1
+	# tray_output eDP-1
 	status_command i3blocks
 }
