--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -2,12 +2,10 @@
 # general settings              					      #
 ###############################################################################
 
+set-option -g default-shell ~/.cargo/bin/nu
+
 # set scroll history to 100,000 lines
 set-option -g history-limit 100000
-
-###############################################################################
-# general settings              					      #
-###############################################################################
 
 # prefix key
 set -g prefix C-f
