--- a/shell/.config/nu/config.toml
+++ b/shell/.config/nu/config.toml
@@ -1,7 +1,11 @@
 edit_mode = "vi"
 path = ["/bin", "/usr/bin", "/usr/sbin", "~/.bin"]
-startup = ["alias la [path] { ls -af $path | select name type mode uid size modified }", "alias vim [el] { nvim $el }"]
+startup = [
+	"alias la [path] { ls -af $path | select name type mode uid size modified }", 
+	"alias vim [el] { nvim $el }"
+]
 
 [env]
+# https://consoledonottrack.com
 DO_NOT_TRACK="1"
 GPG_TTY="/dev/pts/0"
