--- a/gui/.config/i3/config
+++ b/gui/.config/i3/config
@@ -159,6 +159,5 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-	# tray_output eDP-1
-	status_command i3blocks
+	status_command i3blocks -c ~/.config/i3/blocks_config
 }
