simplify nvim config and switch to coc-pyright

--- a/editor/.config/nvim/coc-settings.json
+++ b/editor/.config/nvim/coc-settings.json
@@ -4,6 +4,8 @@
 	"rust-analyzer.diagnostics.disabled": [
 		"macro-error"
 	],
+        "python.linting.flake8Enabled": true,
+        "python.linting.mypyEnabled": true,
 	"languageserver": {
 		"golang": {
 			"command": "gopls",
