--- a/editor/.config/nvim/coc-settings.json
+++ b/editor/.config/nvim/coc-settings.json
@@ -5,7 +5,9 @@
 		"macro-error"
 	],
         "python.linting.flake8Enabled": true,
-        "python.linting.mypyEnabled": true,
+        "python.linting.pylintEnabled": false,
+        "python.linting.mypyEnabled": false,
+        "python.linting.enabled": true,
 	"languageserver": {
 		"golang": {
 			"command": "gopls",
