--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -40,8 +40,8 @@ set -g mouse on
 ###############################################################################
 
 # modern colors
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",alacritty:Tc"
+# set -g default-terminal "tmux-256color"
+# set -ga terminal-overrides ",alacritty:Tc"
 
 # default statusbar colors
 set-option -g status-style fg=colour8
@@ -70,19 +70,3 @@ set-window-option -g clock-mode-colour colour64 #green
 
 # bell
 set-window-option -g window-status-bell-style fg=colour23,bg=colour160 #base02, red
-
-###############################################################################
-# plugins              							      #
-###############################################################################
-
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-
-set -g @continuum-restore 'on'
-set -g @continuum-save-interval '1'
-set -g @resurrect-strategy-nvim 'session'
-
-# initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
