move to new laptop

--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -40,7 +40,7 @@ set -g mouse on
 ###############################################################################
 
 # modern colors
-# set -g default-terminal "tmux-256color"
+set -g default-terminal "tmux-256color"
 # set -ga terminal-overrides ",alacritty:Tc"
 
 # default statusbar colors
