--- a/editor/.config/nvim/coc-settings.json
+++ b/editor/.config/nvim/coc-settings.json
@@ -8,12 +8,5 @@
         "python.linting.flake8Enabled": true,
         "python.linting.pylintEnabled": false,
         "python.linting.mypyEnabled": false,
-        "python.linting.enabled": true,
-	"languageserver": {
-		"golang": {
-			"command": "gopls",
-			"rootPatterns": ["go.mod", ".vim/", ".git/", ".hg/"],
-			"filetypes": ["go"]
-		}
-	}
+        "python.linting.enabled": true
 }
