--- a/shell/.gitconfig
+++ b/shell/.gitconfig
@@ -5,6 +5,18 @@
 	email = lightclient@protonmail.com
 	signingkey = 062431612E12367DAE0E24766E5E56B80EE509D2
 [commit]
-	gpgsign = true
+        gpgsign = true
 [init]
 	defaultBranch = main
+[diff]
+    tool = nvimdiff
+[difftool]
+    prompt = false
+[difftool "nvimdiff"]
+    cmd = "nvim -d \"$LOCAL\" \"$REMOTE\""
+[merge]
+    tool = nvimdiff
+[mergetool]
+    prompt = true
+[mergetool "nvimdiff"]
+    cmd = "nvim -d \"$LOCAL\" \"$REMOTE\" \"$MERGED\" -c 'wincmd w' -c 'wincmd J'"
