--- a/gui/.config/sway/config
+++ b/gui/.config/sway/config
@@ -208,7 +208,7 @@ bindsym $mod+r mode "resize"
 # Read `man 5 sway-bar` for more information about this section.
 bar {
     position bottom
-    font pango:Source Code Pro, Font Awesome 6 Free
+    font pango:SourceCodePro, Font Awesome 6 Free Regular 8
     status_command i3status-rs $HOME/.config/i3status-rust/config.toml
     colors {
         separator #666666
