--- a/gui/.config/alacritty/alacritty.yml
+++ b/gui/.config/alacritty/alacritty.yml
@@ -99,16 +99,16 @@ scrolling:
   #multiplier: 3
 
 # Font configuration
-font:
+#font:
   # Normal (roman) font face
-  normal:
+  #normal:
     # Font family
     #
     # Default:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: monospace
+    # family: monospace
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
