--- a/shell/.gitconfig
+++ b/shell/.gitconfig
@@ -1,22 +1,17 @@
 [core]
-	editor = "nvim"
+        editor = "nvim"
+        pager = diffr --colors refine-added:none:background:0x15,0x99,0x15:bold --colors added:none:background:0x25,0x55,0x25 --colors refine-removed:none:background:0x99,0x15,0x15:bold --colors removed:none:background:0x55,0x33,0x33 | less -R
+
+[interactive]
+        diffFilter = diffr
+
 [user]
 	name = lightclient@protonmail.com
 	email = lightclient@protonmail.com
 	signingkey = 062431612E12367DAE0E24766E5E56B80EE509D2
+
 [commit]
         gpgsign = true
+
 [init]
 	defaultBranch = main
-[diff]
-    tool = nvimdiff
-[difftool]
-    prompt = false
-[difftool "nvimdiff"]
-    cmd = "nvim -d \"$LOCAL\" \"$REMOTE\""
-[merge]
-    tool = nvimdiff
-[mergetool]
-    prompt = true
-[mergetool "nvimdiff"]
-    cmd = "nvim -d \"$LOCAL\" \"$REMOTE\" \"$MERGED\" -c 'wincmd w' -c 'wincmd J'"
