--- a/shell/.gitconfig
+++ b/shell/.gitconfig
@@ -1,17 +1,24 @@
 [core]
-        editor = "nvim"
-        pager = diffr --colors refine-added:none:background:0x15,0x99,0x15:bold --colors added:none:background:0x25,0x55,0x25 --colors refine-removed:none:background:0x99,0x15,0x15:bold --colors removed:none:background:0x55,0x33,0x33 | less -R
-
-[interactive]
-        diffFilter = diffr
+  editor = "nvim"
 
 [user]
-	name = lightclient@protonmail.com
+	name = lightclient
 	email = lightclient@protonmail.com
 	signingkey = 062431612E12367DAE0E24766E5E56B80EE509D2
 
-[commit]
-        gpgsign = true
-
 [init]
 	defaultBranch = main
+
+[diff]
+  external = difft --display=inline
+
+[alias]
+  dlog = -c diff.external=difft log --ext-diff
+  dshow = -c diff.external=difft show --ext-diff
+  ddiff = -c diff.external=difft diff
+
+[gpg]
+  program = gpg
+
+[commit]
+  gpgsign = true
