--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -21,7 +21,6 @@ bind - resize-pane -D 3
 bind + resize-pane -U 3
 bind . command-prompt
 bind a last-window
-bind space command-prompt -p index "select-window"
 bind C-N swap-window -t -1
 bind C-M swap-window -t +1
 
@@ -40,8 +39,16 @@ set -g mouse on
 ###############################################################################
 
 # modern colors
-set -g default-terminal "tmux-256color"
-# set -ga terminal-overrides ",alacritty:Tc"
+set -g default-terminal "xterm-256color"
+
+# for neovim
+set-option -sg escape-time 10
+set-option -sg focus-events on
+
+# Undercurl
+set -g default-terminal "${TERM}"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
 # default statusbar colors
 set-option -g status-style fg=colour8
